--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <progress value="30" max="100"></progress>
       </div>
       <div class="skill">
-        <div>CV</div>
+        <div>LLM</div>
         <progress value="10" max="100"></progress>
       </div>
       <div class="skill">
