--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <progress value="30" max="100"></progress>
       </div>
       <div class="skill">
-        <div>LLM</div>
+        <div>CV & LLM</div>
         <progress value="10" max="100"></progress>
       </div>
       <div class="skill">
@@ -83,7 +83,7 @@
   </div>
   <div style="position: absolute; bottom: 10px;">
       <p align="center">
-        Copyright &copy; 2021-2023
+        Copyright &copy; 2021-2024
           <strong>@jujimeizuo</strong> <br>
           <a href="http://beian.miit.gov.cn/" style="color:#000000;">浙&thinsp;ICP&thinsp;备&thinsp;2021035172&thinsp;号-1</a>
       </p>
