--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p align="center">
           <samp>
             <a href="https://github.com/jujimeizuo/" target="blank"><img align="center" src="./img/github.svg" alt="github" height="47" width="47"   data-toggle="tooltip" data-placement="bottom" data-html="true" title="" data-original-title="<b>GitHub</b>"/></a>&ensp;&ensp;&ensp;
-            <a href="http://www.jujimeizuo.cn/blog/" target="blank"><img align="center" src="./img/wordpress.svg" alt="blog" height="55" width="55"  data-toggle="tooltip" data-placement="bottom" data-html="true" title="" data-original-title="<b>Blog</b>"/></a>&ensp;&ensp;&ensp;
+            <a href="https://blog.jujimeizuo.cn/" target="blank"><img align="center" src="./img/wordpress.svg" alt="blog" height="55" width="55"  data-toggle="tooltip" data-placement="bottom" data-html="true" title="" data-original-title="<b>Blog</b>"/></a>&ensp;&ensp;&ensp;
             <a href="https://note.jujimeizuo.cn/" target="blank"><img align="center" src="./img/note.svg" alt="note" height="50" width="50"  data-toggle="tooltip" data-placement="bottom" data-html="true" title="" data-original-title="<b>Notebook</b>"/></a>&ensp;&ensp;&ensp;
             <a href="http://wpa.qq.com/msgrd?v=3&uin=3058852685&site=qq&menu=yes" target="blank"><img align="center" src="./img/qq.svg" alt="qq" height="50" width="50"  data-toggle="tooltip" data-placement="bottom" data-html="true" title="" data-original-title="<b>QQ</b>"/></a>&ensp;&ensp;&ensp;
             <a href="https://running-page-nu-seven.vercel.app/" target="blank"><img align="center" src="./img/run.svg" alt="run" height="50" width="50"  data-toggle="tooltip" data-placement="bottom" data-html="true" title="" data-original-title="<b>Run</b>"/></a>&ensp;&ensp;&ensp;
