--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div class="MainInformation">
       <div class="myBriefInformation">
         <div>🌟ID:jujimeizuo(狙击美佐)</div>
+        <div>💕性格:INTJ</div>
         <div>🏫就读于:江南大学</div>
         <div>⚙️专业:计算机技术（研一）</div>
 	<div>🏢曾就职于:<a href="https://www.xgrids.com/" style="color:#000000;"> XGrids</a></div>
