--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div>🌟ID:jujimeizuo(狙击美佐)</div>
         <div>💕性格:INTJ</div>
         <div>🏫就读于:江南大学</div>
-        <div>⚙️专业:计算机技术（研一）</div>
+        <div>⚙️专业:计算机技术（研二）</div>
 	<div>🏢曾就职于:<a href="https://www.xgrids.com/" style="color:#000000;"> XGrids</a></div>
         <div>🕛PB:10KM(56'45)|15KM(1'33'21)|半马(None)</div>
       </div>
