--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div>🏫就读于:江南大学</div>
         <div>⚙️专业:计算机技术（研二）</div>
 	<div>🏢曾就职于:<a href="https://www.xgrids.com/" style="color:#000000;"> XGrids</a></div>
-        <div>🕛PB:10KM(56'45)|15KM(1'33'21)|半马(None)</div>
+        <div>🕛PB:5KM(24'43)|10KM(54'30)|15KM(1'33'21)|半马(None)</div>
       </div>
       <div class="myPic">
         <img src="./img/head.png">
@@ -56,7 +56,7 @@
         <progress value="30" max="100"></progress>
       </div>
       <div class="skill">
-        <div>CV & LLM</div>
+        <div>3dCV</div>
         <progress value="10" max="100"></progress>
       </div>
       <div class="skill">
@@ -84,7 +84,7 @@
   </div>
   <div style="position: absolute; bottom: 10px;">
       <p align="center">
-        Copyright &copy; 2021-2024
+        Copyright &copy; 2020-2024
           <strong>@jujimeizuo</strong> <br>
           <a href="http://beian.miit.gov.cn/" style="color:#000000;">浙&thinsp;ICP&thinsp;备&thinsp;2021035172&thinsp;号-1</a>
       </p>
