--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div>🏫就读于:江南大学</div>
         <div>⚙️专业:计算机技术（研二）</div>
 	<div>🏢曾就职于:<a href="https://www.xgrids.com/" style="color:#000000;"> XGrids</a></div>
-        <div>🕛PB:5KM(24'43)|10KM(54'30)|15KM(1'33'21)|半马(None)</div>
+        <div>🕛PB:5KM(23'52)|10KM(52'50)|半马(None)</div>
       </div>
       <div class="myPic">
         <img src="./img/head.png">
