--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
   <div class="OtherContainer">
     <div class="MainInformation">
       <div class="myBriefInformation">
-        <div>🌟ID:jujimeizuo(狙击美佐)</div>
-        <div>💕性格:INTJ</div>
-        <div>🏫就读于:江南大学</div>
-        <div>⚙️专业:计算机技术（研二）</div>
-	<div>🏢曾就职于:<a href="https://www.xgrids.com/" style="color:#000000;"> XGrids</a></div>
-        <div>🕛PB:5KM(23'52)|10KM(52'50)|半马(None)</div>
+        <div>🌟ID: jujimeizuo</div>
+        <!-- <div>💕性格:INTJ</div> -->
+        <div>🏫Studying in:JiangNan University</div>
+        <div>⚙️Major: Computer Science</div>
+        <div>👁️Working on: 3D Vision(SLAM|NeRF|3DGS)</div>
+	<div>🏢Worked in:<a href="https://www.xgrids.com/" style="color:#000000;"> XGrids</a></div>
+        <div>🕛PB: 5KM(23'52)|10KM(52'50)|half-m(None)</div>
       </div>
       <div class="myPic">
         <img src="./img/head.png">
@@ -56,7 +57,7 @@
         <progress value="30" max="100"></progress>
       </div>
       <div class="skill">
-        <div>3dCV</div>
+        <div>3DV</div>
         <progress value="10" max="100"></progress>
       </div>
       <div class="skill">
@@ -84,7 +85,7 @@
   </div>
   <div style="position: absolute; bottom: 10px;">
       <p align="center">
-        Copyright &copy; 2020-2024
+        Copyright &copy; 2020-2025
           <strong>@jujimeizuo</strong> <br>
           <a href="http://beian.miit.gov.cn/" style="color:#000000;">浙&thinsp;ICP&thinsp;备&thinsp;2021035172&thinsp;号-1</a>
       </p>
