--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="myBriefInformation">
         <div>🌟ID: jujimeizuo</div>
         <!-- <div>💕性格:INTJ</div> -->
-        <div>🏫Studying in:JiangNan University</div>
+        <div>🏫Studying in:Jiangnan University</div>
         <div>⚙️Major: Computer Science</div>
         <div>👁️Working on: 3D Vision(SLAM|NeRF|3DGS)</div>
 	<div>🏢Worked in:<a href="https://www.xgrids.com/" style="color:#000000;"> XGrids</a></div>
@@ -85,8 +85,7 @@
   </div>
   <div style="position: absolute; bottom: 10px;">
       <p align="center">
-        Copyright &copy; 2020-2025
-          <strong>@jujimeizuo</strong> <br>
+        Copyright &copy; 2020-2025 @jujimeizuo<br>
           <a href="http://beian.miit.gov.cn/" style="color:#000000;">浙&thinsp;ICP&thinsp;备&thinsp;2021035172&thinsp;号-1</a>
       </p>
     </div>
