--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div>⚙️Major: Computer Science</div>
         <div>👁️Working on: 3D Vision(SLAM|NeRF|3DGS)</div>
 	<div>🏢Worked in:<a href="https://www.xgrids.com/" style="color:#000000;"> XGrids</a></div>
-        <div>🕛PB: 5KM(23'52)|10KM(52'50)|half-m(None)</div>
+        <div>🕛PB: 5KM(23'52)|10KM(52'50)|half-m(2'49'34)</div>
       </div>
       <div class="myPic">
         <img src="./img/head.png">
